--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉张芯鑫</title>
-    <meta itemprop="name" content="敲击张芯鑫" />
-    <meta itemprop="description" content="张芯鑫量身定做" />
+    <title>室友不在宿舍，一个人寂寞</title>
+    <meta itemprop="name" content="123" />
+    <meta itemprop="description" content="123" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
     <link href="./static/index.css" rel="stylesheet" type="text/css">
